# lecture-testing-task

05_hw/: .gitignore  CMakeLists.txt
05_hw/benchmark/: CMakeLists.txt  benchmark.cpp
05_hw/src/: main.c  stack.c
05_hw/test/: CMakeLists.txt  README.md
05_hw/test/scripts/: clang-tidy.sh  code-coverage.sh
05_hw/test/tests/: test_smoke.cpp  test_stack.cpp
